# gpu-job-control

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish-runpod-worker.yml
config/: README.md  execution-policy.json  gpu-profiles.json  image-contracts.json  model-capabilities.json  operation-catalog.json  provider-operations.example.json  provider-operations.json  requirement-registry.json
docker/: asr-worker.Dockerfile  runpod-asr-worker.Dockerfile  runpod-llm-worker.Dockerfile
docs/: ai-workload-os-design.md  architecture.md  caller-contract.md  client-integration-guide.md  cloud-gpu-provider-research.md  data-lifecycle.md  error-codes.md  external-system-self-modify-prompt-v1.md  finished-product-gate.md  generic-system-integration-prompt-v1.md  generic-system-integration-prompt.md  ghcr-publish-runbook.md  index.md  launch-decision.md  launch-phase0-5-gate.md  launch-slice-manifest.json  launch-worktree-cleanup.md  operation-catalog.md  operations.md  product-invariants.md  provider-module-contracts.md  provider-promotion.md  public-api.md  routing-policy.md  runpod-self-hosted-research.md  runpod-support-question.md  worker-contract.md
docs/council-audit/: 20260425-caller-product-surface.jsonl  20260425-complete-launch-roadmap.jsonl  20260425-complete-product-checklist.jsonl  20260425-deterministic-api-implementation.jsonl  20260425-deterministic-api-reset.jsonl  20260425-finished-product-29-criteria.jsonl  20260425-finished-product-final-criteria.jsonl  20260425-finished-product-gap.jsonl  20260425-finished-product-gate-implementation.jsonl  20260425-generic-caller-prompt.jsonl  20260425-launch-execution-order.jsonl  20260425-post-launch-api-roadmap.jsonl  20260425-product-polish-implementation.jsonl  20260425-provider-contract-probe-static-dedup.jsonl  (+60 more)
schemas/: gpu-job-caller-request.schema.json  gpu-job-public-api.openapi.json  gpu-job.schema.json
scripts/: council-run  council_run.py  gpu-job-guard-run  remote-docker  remote-docker-build-check  runpod-asr-serverless-contract-probe.py  runpod-vllm-support-probe.py  validate-council-audit  validate_council_audit.py  vast-pyworker-serverless-contract-probe.py
src/gpu_job/: api.py  (+72 more)
systemd/: gpu-job-api.service  gpu-job-guard.service  gpu-job-guard.timer  gpu-job-worker.service
templates/: runpod-asr-serverless.json  vast-asr-serverless.json
tests/: test_active_timeout_recovery.py  test_api_response_schema.py  test_asr_diarization_contract.py  test_caller_contract.py  test_circuit_half_open.py  test_cli_public_surface.py  test_config_cli.py  test_council_audit.py  test_cpu_workflow_helper.py  test_execution_plan_contract.py  test_execution_record_contract.py  test_finished_product_gate.py  test_guard_scope.py  test_image_contracts.py  test_image_distribution.py  test_intake_response.py  test_launch_freeze_guards.py  test_launch_gate.py  test_modal_llm_quality.py  test_modal_provider.py  test_ollama_embedding.py  test_ollama_local_transport.py  test_plan_quote_purity.py  test_policy_router.py  test_production_contracts.py  test_provider_catalog_contracts.py  test_provider_contract_probe.py  test_provider_module_contracts.py  test_provider_orphan_reaper.py  test_provider_verify_contract.py  test_public_client.py  test_public_ops.py  test_requirement_registry.py  test_runpod_config.py  test_runpod_serverless_asr.py  test_runpod_serverless_probe_script.py  test_security.py  test_selftest_readiness.py  test_standardized_planning.py  test_timing_v2.py  (+5 more)
(+90 files in other folders)
