[project]
name = "gpu-job-control"
version = "0.1.0"
description = "Provider-neutral GPU workload control plane."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "gpu-job-control maintainers" }]
keywords = ["gpu", "workload", "scheduler", "runpod", "modal", "vast", "ollama", "control-plane"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Distributed Computing",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/noiehoie/gpu-job-control"
Repository = "https://github.com/noiehoie/gpu-job-control"
Issues = "https://github.com/noiehoie/gpu-job-control/issues"
Documentation = "https://github.com/noiehoie/gpu-job-control/tree/main/docs"
Changelog = "https://github.com/noiehoie/gpu-job-control/blob/main/CHANGELOG.md"

[project.optional-dependencies]
providers = [
  "modal==1.4.2",
  "runpod==1.9.0",
]
dev = [
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
  "ruff==0.15.11",
]

[project.scripts]
gpu-job = "gpu_job.cli:main"
gpu-job-api = "gpu_job.api:main"
gpu-job-asr-worker = "gpu_job.workers.asr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_job"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
