[project]
name = "gpu-job-control"
version = "0.2.4"
description = "Provider-neutral GPU workload control plane."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "gpu-job-control maintainers" }]
keywords = ["gpu", "workload", "scheduler", "runpod", "modal", "vast", "ollama", "control-plane"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Distributed Computing",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/noiehoie/gpu-job-control"
Repository = "https://github.com/noiehoie/gpu-job-control"
Issues = "https://github.com/noiehoie/gpu-job-control/issues"
Documentation = "https://github.com/noiehoie/gpu-job-control/tree/main/docs"
Changelog = "https://github.com/noiehoie/gpu-job-control/blob/main/CHANGELOG.md"

[project.optional-dependencies]
providers = [
  "modal==1.4.2",
  "runpod==1.9.0",
  "vastai-sdk @ git+https://github.com/vast-ai/vast-sdk.git@1c39c420a50553f2c2c719f901e1463823b69a3b",
]
dev = [
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
  "ruff==0.15.12",
]

[project.scripts]
gpu-job = "gpu_job.cli_public:main"
gpu-job-admin = "gpu_job.cli:main"
gpu-job-api = "gpu_job.api:main"
gpu-job-asr-worker = "gpu_job.workers.asr:main"
gpu-job-runpod-asr-worker = "gpu_job.workers.runpod_asr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_job"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
